tests/miniJava/neg/006184_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { this System.out.println ( { } ) ; } }
